# t4l_editorial_cycle

./: .env.example  .gitignore  AGENTS.md  CLAUDE.md  README.md  pyproject.toml  run_12h_test.sh
app/: adapters.py  cli.py  config.py  constants.py  main.py  orchestration.py  schemas.py  team_codes.py
changelog/: changelog_2026-04-15.md  changelog_2026-04-19.md  changelog_2026-04-21-v2.md  changelog_2026-04-21.md  changelog_2026-04-23.md  changelog_2026-04-24-v2.md  changelog_2026-04-24.md  changelog_2026-04-26-v2.md  changelog_2026-04-26.md  changelog_2026-04-28.md  changelog_2026-05-01.md  changelog_2026-05-12.md
docs/: idea.md  mvp.md  podcast_runbook.md  product-architecture.md  rotating-extraction-function-auth-token.md  team_beat_mvp.md
scripts/: architecture_graph_manual.yml  audit_team_codes.py  build_6h_test_report.py  build_architecture_graph.py  build_articles_view.py  build_curated_pool_plan.py  build_cycle_report.py  build_overview_report.py  build_quality_report.py  ingestion_health.py  migrate_curated_images.py  podcast_codex_morning.md  podcast_daily.sh  rerun_image_cascade.py  review_curated_pool.py  submit_curated_batch.py  team_beat_preflight.py  tts_recover.py  upload_curated_pool.py
supabase/: config.toml
tests/: conftest.py  test_architecture_graph.py  test_article_quality_gate.py  test_audio_compose.py  test_beat_roundup_writer.py  test_clients_base.py  test_clients_knowledge.py  test_clients_news.py  test_config.py  test_db_adapters.py  test_delivery_spotify.py  test_editorial_memory.py  test_gemini_tts_client.py  test_german_flow.py  (+30 more)
(+121 files in other folders)
